🎯 Major SEO & Analytics Enhancement
✅ Schema Structured Data Implementation:
- Added comprehensive JSON-LD schema to 9 major pages
- Organization, WebPage, VideoGame, SoftwareApplication schemas
- CollectionPage, Product, HowTo, FAQPage, ContactPage schemas
- Enhanced search engine understanding and rich snippets

📊 Microsoft Clarity Integration:
- Added Clarity analytics code (uz6v2374u4) to all pages
- User behavior tracking with heatmaps and session recordings
- Comprehensive analytics stack: GA4 + Yandex + Ahrefs + Clarity

🔍 Competitor Analysis:
- Detailed analysis of theforgecalculator.net/.com/.org
- Identified competitive advantages and optimization opportunities
- Strategic insights for feature development and SEO

📈 SEO Optimizations:
- Enhanced meta descriptions and structured data
- Improved internal linking and canonical URLs
- Better search engine visibility and ranking potential

🎮 Gaming-Focused Enhancements:
- VideoGame schema with detailed game information
- Product schemas for ores and tools
- Gaming community-oriented content structure

Files modified: index.html, codes.html, weapons.html, armor.html, pickaxe.html, ore/index.html, ore/snowite.html, feedback.html, privacy-policy.html
Files added: SCHEMA_IMPLEMENTATION_COMPLETE.md, CLARITY_IMPLEMENTATION_REPORT.md, competitor/ analysis files

--- a/index.html
+++ b/index.html
@@ -58,6 +58,273 @@
     <!-- Ahrefs Analytics -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
     
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "uz6v2374u4");
+    </script>
+    
+    <!-- Structured Data - JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@graph": [
+            {
+                "@type": "Organization",
+                "@id": "https://forge-calculator.com/#organization",
+                "name": "Forge Calculator",
+                "url": "https://forge-calculator.com/",
+                "logo": {
+                    "@type": "ImageObject",
+                    "url": "https://forge-calculator.com/favicon-120x120.png",
+                    "width": 120,
+                    "height": 120
+                },
+                "sameAs": [
+                    "https://github.com/forge-calculator"
+                ]
+            },
+            {
+                "@type": "VideoGame",
+                "@id": "https://forge-calculator.com/#forge-game",
+                "name": "The Forge",
+                "alternateName": [
+                    "The Forge Roblox Game",
+                    "Roblox The Forge",
+                    "The Forge BETA"
+                ],
+                "description": "The Forge is a popular Roblox crafting game where players mine ores and forge powerful weapons and armor. Combine different ore types to create items with unique stats, traits, and multipliers across World 1, World 2, and World 3 (The Peak).",
+                "applicationCategory": "Game",
+                "operatingSystem": "Roblox",
+                "gamePlatform": "Roblox",
+                "genre": [
+                    "Action role-playing",
+                    "Crafting",
+                    "Adventure"
+                ],
+                "inLanguage": ["en", "ru"],
+                "gameItem": [
+                    {
+                        "@type": "Thing",
+                        "name": "Weapons",
+                        "description": "Craftable weapons with various stats and traits"
+                    },
+                    {
+                        "@type": "Thing", 
+                        "name": "Armor",
+                        "description": "Protective gear with defense bonuses and special properties"
+                    },
+                    {
+                        "@type": "Thing",
+                        "name": "Ores",
+                        "description": "Raw materials used for forging, each with unique multipliers"
+                    }
+                ],
+                "gameLocation": [
+                    {
+                        "@type": "Place",
+                        "name": "World 1",
+                        "description": "Starting area with basic ores and crafting"
+                    },
+                    {
+                        "@type": "Place",
+                        "name": "World 2", 
+                        "description": "Advanced area with rare ores and stronger enemies"
+                    },
+                    {
+                        "@type": "Place",
+                        "name": "World 3 (The Peak)",
+                        "description": "Latest expansion with the most powerful ores and equipment"
+                    }
+                ],
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD",
+                    "availability": "https://schema.org/InStock",
+                    "description": "Free to play Roblox game"
+                },
+                "publisher": {
+                    "@id": "https://forge-calculator.com/#organization"
+                }
+            },
+            {
+                "@type": "SoftwareApplication",
+                "@id": "https://forge-calculator.com/#software",
+                "name": "Forge Calculator",
+                "applicationCategory": "UtilitiesApplication",
+                "operatingSystem": ["Windows", "macOS", "Linux", "Android", "iOS"],
+                "description": "Free Forge Calculator for The Forge Roblox game. Calculate crafting resources, materials, and costs instantly. Optimize your forging strategy with our comprehensive tool.",
+                "url": "https://forge-calculator.com/",
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD",
+                    "availability": "https://schema.org/InStock"
+                },
+                "featureList": [
+                    "Weapon & Armor Class Calculation",
+                    "Optimal Ore Amount Calculation", 
+                    "Real-Time Results Processing",
+                    "Modifier Multiplier Analysis",
+                    "Trait Activation Prediction",
+                    "Complete Ore Coverage"
+                ],
+                "about": {"@id": "https://forge-calculator.com/#forge-game"},
+                "publisher": {"@id": "https://forge-calculator.com/#organization"}
+            },
+            {
+                "@type": "WebPage",
+                "@id": "https://forge-calculator.com/#webpage",
+                "url": "https://forge-calculator.com/",
+                "name": "Roblox The Forge Calculator",
+                "description": "Master your weapon and armor crafting with The Forge Calculator. Optimize ore combinations and trait setups with real-time calculations for The Forge on Roblox.",
+                "inLanguage": "en",
+                "isPartOf": {
+                    "@type": "WebSite",
+                    "@id": "https://forge-calculator.com/#website",
+                    "name": "Forge Calculator",
+                    "url": "https://forge-calculator.com/",
+                    "publisher": {"@id": "https://forge-calculator.com/#organization"}
+                },
+                "about": [
+                    {"@id": "https://forge-calculator.com/#software"},
+                    {"@id": "https://forge-calculator.com/#forge-game"}
+                ],
+                "mentions": {"@id": "https://forge-calculator.com/#forge-game"},
+                "primaryImageOfPage": {
+                    "@type": "ImageObject",
+                    "url": "https://forge-calculator.com/favicon-120x120.png"
+                },
+                "datePublished": "2024-01-01",
+                "dateModified": "2025-01-10",
+                "author": {"@id": "https://forge-calculator.com/#organization"},
+                "publisher": {"@id": "https://forge-calculator.com/#organization"}
+            },
+            {
+                "@type": "HowTo",
+                "@id": "https://forge-calculator.com/#howto",
+                "name": "How to Use The Forge Calculator",
+                "description": "Step-by-step guide on using The Forge Calculator to optimize your weapon and armor crafting in Roblox.",
+                "image": {
+                    "@type": "ImageObject",
+                    "url": "https://forge-calculator.com/favicon-120x120.png"
+                },
+                "totalTime": "PT5M",
+                "estimatedCost": {
+                    "@type": "MonetaryAmount",
+                    "currency": "USD",
+                    "value": "0"
+                },
+                "supply": [
+                    {
+                        "@type": "HowToSupply",
+                        "name": "Web Browser"
+                    },
+                    {
+                        "@type": "HowToSupply", 
+                        "name": "Internet Connection"
+                    }
+                ],
+                "tool": [
+                    {
+                        "@type": "HowToTool",
+                        "name": "The Forge Calculator",
+                        "url": "https://forge-calculator.com/"
+                    }
+                ],
+                "step": [
+                    {
+                        "@type": "HowToStep",
+                        "name": "Add Your Ores",
+                        "text": "Input the ores you plan to use in The Forge Calculator. The tool will process your ore combinations instantly.",
+                        "url": "https://forge-calculator.com/#calculator"
+                    },
+                    {
+                        "@type": "HowToStep",
+                        "name": "View Weapon/Armor Class",
+                        "text": "The Forge Calculator shows which weapon or armor class you'll craft based on your ore selection.",
+                        "url": "https://forge-calculator.com/#calculator"
+                    },
+                    {
+                        "@type": "HowToStep",
+                        "name": "Check Optimal Amounts",
+                        "text": "Our forge calculator displays the optimal ore amounts needed for your desired craft and trait percentages.",
+                        "url": "https://forge-calculator.com/#calculator"
+                    },
+                    {
+                        "@type": "HowToStep",
+                        "name": "Review Modifiers",
+                        "text": "See final modifier multipliers calculated by The Forge Calculator to understand your craft's potential strength.",
+                        "url": "https://forge-calculator.com/#calculator"
+                    },
+                    {
+                        "@type": "HowToStep",
+                        "name": "Verify Trait Activation",
+                        "text": "The forge calculator indicates whether ore traits will be active and how strong the applied traits will be.",
+                        "url": "https://forge-calculator.com/#calculator"
+                    },
+                    {
+                        "@type": "HowToStep",
+                        "name": "Optimize Build",
+                        "text": "Use The Forge Calculator to experiment with different ore combinations and find the optimal setup for your weapon or armor.",
+                        "url": "https://forge-calculator.com/#calculator"
+                    }
+                ],
+                "about": {"@id": "https://forge-calculator.com/#forge-game"}
+            },
+            {
+                "@type": "FAQPage",
+                "@id": "https://forge-calculator.com/#faq",
+                "mainEntity": [
+                    {
+                        "@type": "Question",
+                        "name": "Is The Forge Calculator accurate for The Forge on Roblox?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "Yes, The Forge Calculator uses the latest game data to provide accurate ore combination calculations, modifier multipliers, and trait percentages for all weapons and armor in The Forge. We regularly update our forge calculator to reflect any game changes."
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "What can I see when using The Forge Calculator?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "When adding ores to The Forge Calculator, you'll see which weapon or armor class you'll craft, optimal ore amounts, final modifier multipliers, whether ore traits will be active, how strong the applied traits will be, and the optimal number of ores needed to increase crafting chances."
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "Does The Forge Calculator work in real time?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "Yes! The Forge Calculator processes your inputs and presents results of potential crafts in real time. Our forge calculator eliminates the need for manual calculations, giving you instant feedback as you adjust ore combinations."
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "Is The Forge Calculator free to use?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "Yes, The Forge Calculator is completely free. We created this forge calculator to help The Forge community optimize their forging strategy, whether you're a beginner or experienced player seeking optimal builds."
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "Can I use The Forge Calculator on mobile devices?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "Yes, The Forge Calculator is fully responsive and works perfectly on smartphones, tablets, and desktop computers. Use our forge calculator anywhere, anytime to plan your weapon and armor crafts in The Forge."
+                        }
+                    }
+                ]
+            }
+        ]
+    }
+    </script>
 
 </head>
 <body>
