🎨 Phase 2 Frontend Design Complete - Claude Skills Compliance
✅ Completed Phase 2 Implementation:
- Font integration across all remaining pages (7 pages)
- Special page design enhancements (ore, pickaxe, feedback, legal)
- Russian language Cyrillic font support
- CSS-only styling (100% external CSS, no inline styles)
- Full Claude Skills compliance verification

🎮 Enhanced Gaming Theme Features:
- Orbitron + Press Start 2P + JetBrains Mono font system
- Atmospheric backgrounds with forge workshop theme
- Metal texture effects and glow animations
- Rarity-based color system for game elements
- Responsive design for all devices

📊 Technical Improvements:
- Modular CSS architecture with design tokens
- Performance optimized font loading
- International character set support
- Accessibility features (reduced motion support)
- Mobile-first responsive design

🚀 Business Impact:
- 100% page coverage with consistent branding
- Professional gaming aesthetic surpassing competitors
- Enhanced user experience with immersive design
- International market support (Russian localization)

Files Updated: 12 HTML pages + forge-theme.css + 5 documentation files

--- a/codes.html
+++ b/codes.html
@@ -18,6 +18,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
+    
+    <!-- Google Fonts - Gaming Theme Typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Press+Start+2P&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <meta name="description" content="The Forge Codes January 2026 - Get free ores, coins, and rewards in The Forge Roblox game. Updated daily with working codes.">
     <meta name="keywords" content="the forge codes january 2026, forge codes roblox, the forge redeem codes, roblox forge codes, forge game codes">
     <link rel="canonical" href="https://forge-calculator.com/codes">
@@ -197,11 +202,10 @@
         </div>
 
         <!-- Advertisement -->
-        <div style="text-align: center; margin: 2rem 0;">
+        <div class="ad-container">
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7293351660638119" crossorigin="anonymous"></script>
             <!-- display ads -->
             <ins class="adsbygoogle"
-                 style="display:block"
                  data-ad-client="ca-pub-7293351660638119"
                  data-ad-slot="7925244904"
                  data-ad-format="auto"
