--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
+    
+    <!-- Google Fonts - Gaming Theme Typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Press+Start+2P&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <meta name="description" content="Free Forge Calculator for The Forge Roblox game. Calculate crafting resources, materials, and costs instantly. Optimize your forging strategy with our tool.">
     <meta name="keywords" content="forge calculator, forge calculator roblox, the forge calculator, roblox forge, forge roblox calculator, roblox crafting calculator, the forge game, роблокс кузница, калькулятор кузницы, roblox forge calculator русский">
     <link rel="canonical" href="https://forge-calculator.com/">
