--- a/pickaxe.html
+++ b/pickaxe.html
@@ -20,6 +20,11 @@
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     
+    <!-- Google Fonts - Gaming Theme Typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Press+Start+2P&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    
     <meta name="description" content="Complete guide to Pickaxes in The Forge - Learn about all pickaxe types, mining power, luck boost, and rune slots. Master the art of ore mining with the best pickaxe strategies.">
     <meta name="keywords" content="the forge pickaxe, forge pickaxe guide, roblox forge pickaxe, pickaxe mining power, pickaxe luck boost, pickaxe rune slots, best pickaxe the forge">
     <link rel="canonical" href="https://forge-calculator.com/pickaxe">
