--- a/weapons.html
+++ b/weapons.html
@@ -18,6 +18,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
+    
+    <!-- Google Fonts - Gaming Theme Typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Press+Start+2P&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <meta name="description" content="The Forge Weapons Guide - Learn about all 8 weapon types in The Forge Roblox game. From Daggers to Colossal Swords.">
     <meta name="keywords" content="the forge weapons, forge weapon types, roblox forge weapons, the forge weapon guide, colossal swords, katana, daggers, great axes">
     <link rel="canonical" href="https://forge-calculator.com/weapons">
