--- a/armor.html
+++ b/armor.html
@@ -18,6 +18,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
+    
+    <!-- Google Fonts - Gaming Theme Typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Press+Start+2P&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <meta name="description" content="Complete guide to all armor types in The Forge - Light, Medium, and Heavy armor with stats, prices, and crafting information.">
     <meta name="keywords" content="the forge armor, forge armor guide, light armor, medium armor, heavy armor, armor stats">
     <link rel="canonical" href="https://forge-calculator.com/armor">
