--- a/ore/snowite.html
+++ b/ore/snowite.html
@@ -17,6 +17,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
+    
+    <!-- Google Fonts - Gaming Theme Typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Press+Start+2P&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <meta name="description" content="Complete guide to Snowite The Forge ore - Learn how to get Snowite The Forge, where to mine Snowite The Forge, and how to use Snowite The Forge for crafting legendary weapons with attack speed bonuses.">
     <meta name="keywords" content="snowite the forge, snowite the forge ore, how to get snowite the forge, snowite the forge mining guide, snowite the forge crafting, roblox snowite the forge, legendary snowite the forge ore, snowite the forge attack speed">
     <link rel="canonical" href="https://forge-calculator.com/ore/snowite">
