--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,6 +14,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
+    
+    <!-- Google Fonts - Gaming Theme Typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Press+Start+2P&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <meta name="description" content="Privacy Policy for Roblox The Forge Calculator">
     <link rel="canonical" href="https://forge-calculator.com/privacy-policy">
     <title>Privacy Policy - Roblox The Forge Calculator</title>
