--- a/ru/crafts.html
+++ b/ru/crafts.html
@@ -18,6 +18,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
+    
+    <!-- Google Fonts - Gaming Theme Typography with Cyrillic Support -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Press+Start+2P&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap&subset=latin,cyrillic" rel="stylesheet">
     <meta name="description" content="The Forge крафты - Полное руководство по крафтам в игре The Forge Roblox. Изучите все крафты The Forge, комбинации руд и стратегии создания оружия и брони.">
     <meta name="keywords" content="the forge крафты, крафты the forge, forge крафты, крафты в the forge, the forge крафт, крафт the forge, роблокс крафты, roblox the forge крафты, крафты оружия the forge, крафты брони the forge">
     <link rel="canonical" href="https://forge-calculator.com/ru/crafts">
