--- a/ore/snowite.html
+++ b/ore/snowite.html
@@ -146,6 +146,30 @@
                     "name": "The Forge",
                     "gamePlatform": "Roblox"
                 }
+            },
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://forge-calculator.com/ore/snowite#breadcrumb",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Home",
+                        "item": "https://forge-calculator.com/"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Ore Guide",
+                        "item": "https://forge-calculator.com/ore"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 3,
+                        "name": "Snowite Ore",
+                        "item": "https://forge-calculator.com/ore/snowite"
+                    }
+                ]
             }
         ]
     }
