--- a/codes.html
+++ b/codes.html
@@ -126,6 +126,24 @@
                     "gamePlatform": "Roblox"
                 },
                 "isPartOf": {"@id": "https://forge-calculator.com/codes#webpage"}
+            },
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://forge-calculator.com/codes#breadcrumb",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Home",
+                        "item": "https://forge-calculator.com/"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Codes",
+                        "item": "https://forge-calculator.com/codes"
+                    }
+                ]
             }
         ]
     }
