--- a/ore/index.html
+++ b/ore/index.html
@@ -125,6 +125,24 @@
                     "gamePlatform": "Roblox"
                 },
                 "isPartOf": {"@id": "https://forge-calculator.com/ore#webpage"}
+            },
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://forge-calculator.com/ore#breadcrumb",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Home",
+                        "item": "https://forge-calculator.com/"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Ore Guide",
+                        "item": "https://forge-calculator.com/ore"
+                    }
+                ]
             }
         ]
     }
