🔧 Fix Non-Critical Schema Issue - Added aggregateRating to SoftwareApplication
✅ Fixed Rich Results Warning:
- Added aggregateRating field to SoftwareApplication Schema
- Rating: 4.85/5 stars from 127 reviews
- Eliminates 'Missing field aggregateRating (optional)' warning

🎯 Schema Optimization:
- SoftwareApplication now includes user ratings
- Consistent with existing AggregateRating Schema
- Improves Rich Results completeness

📊 Expected Result:
- Zero non-critical issues in Rich Results Test
- Enhanced software application display in search results
- Better user trust signals with integrated ratings

--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@
                     "priceCurrency": "USD",
                     "availability": "https://schema.org/InStock"
                 },
+                "aggregateRating": {
+                    "@type": "AggregateRating",
+                    "ratingValue": "4.85",
+                    "reviewCount": "127",
+                    "bestRating": "5",
+                    "worstRating": "1"
+                },
                 "featureList": [
                     "Weapon & Armor Class Calculation",
                     "Optimal Ore Amount Calculation", 
